--- a/index.css
+++ b/index.css
@@ -7,6 +7,10 @@ html{
     color:white;
     background-color: #36393f;
 }
+a{
+    color: aqua;
+    align-items: center;
+}
 li{
     flex:50%;
     padding:50px;
