--- a/reference/NodeGuide.css
+++ b/reference/NodeGuide.css
@@ -1,7 +1,12 @@
 html{
     font-family: Arial, Helvetica, sans-serif;
     color:white;
-    background-color: #36393f;
+    background-color: black;
+    margin: 0;
+    padding: 0;
+}
+h1{
+    margin: 0;
 }
 a{
     color:aqua;
@@ -54,4 +59,15 @@ td,th {
 }
 .section{
     margin-left: 50px;
+}
+body{
+    margin: 0px;
+    padding: 0;
+}
+
+#mid{
+    padding: 30px;
+    max-width:1200px;
+    margin: 0 auto;
+    background-color: #36393f;
 }
