--- a/imageSolver/imageSolver.css
+++ b/imageSolver/imageSolver.css
@@ -5,4 +5,15 @@ html{
     width: 100%;
     min-height: 100%;
     max-height: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    color:white;
+    background-color: #36393f;
 }
+.title{
+    text-align: center;
+}
+a:link, a:visited {
+    color: cyan;
+    background-color: transparent;
+    text-decoration: none;
+  }
