--- a/reference/NodeGuide.css
+++ b/reference/NodeGuide.css
@@ -63,6 +63,7 @@ td,th {
 body{
     margin: 0px;
     padding: 0;
+    padding-top: 25px;
 }
 
 #mid{
@@ -71,3 +72,32 @@ body{
     margin: 0 auto;
     background-color: #36393f;
 }
+#navBar{
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+    background-color: #333;
+    box-sizing: border-box;
+    display: inline-block;
+    position:fixed;
+    top:0px;
+    left:0px;
+}
+#navBar a{
+    float: left;
+    color: cyan;
+    text-align: center;
+    font-size: 17px;
+    text-decoration: none;
+    padding: 14px 16px;
+    margin: 0px;
+}
+#navBar a:hover{
+    background-color:antiquewhite ;
+    color: black;
+}
+
+#navBar a.active {
+    background-color: #1e66d2;
+    color: white;
+  }
