--- a/imageSolver/imageSolver.css
+++ b/imageSolver/imageSolver.css
@@ -76,7 +76,7 @@ body{
     background-color: #333;
     box-sizing: border-box;
     display: inline-block;
-    position:fixed;
+    position:absolute;
     top:0px;
     left:0px;
 }
