--- a/imageSolver/imageSolver.css
+++ b/imageSolver/imageSolver.css
@@ -12,6 +12,9 @@ html{
 .title{
     text-align: center;
 }
+#video{
+    padding-top: 5px;
+}
 a:link, a:visited {
     color: cyan;
     background-color: transparent;
@@ -41,20 +44,20 @@ h1{
     padding: 5px;
     cursor: pointer;
 }
-.tableDisplay{
+.tableDisplay, .prioNodes{
     min-width: 120px;
     height: 70px;
     text-align: center;
     border: 1px solid black;
     padding: 5px;
 }
-#imgL,#halfB{
+#imgL,#halfB,#prioMain, #prioSub{
     display: flex;
     flex-wrap: wrap;
 }
 .formatting{
     display: block;
-    padding:0%;
+    padding-top:0%;
     margin:0%;
 }
 .nodelib{
@@ -99,4 +102,61 @@ body{
 #navBar a.active {
     background-color: #1e66d2;
     color: white;
+}
+
+/* From Uiverse.io by adamgiebl */ 
+.cssbuttons-io {
+  position: relative;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 18px;
+  letter-spacing: 0.05em;
+  border-radius: 0.8em;
+  cursor: pointer;
+  border: none;
+  background: linear-gradient(to right, #8e2de2, #4a00e0);
+  color: ghostwhite;
+  overflow: hidden;
+}
+
+.cssbuttons-io svg {
+  width: 1.2em;
+  height: 1.2em;
+  margin-right: 0.5em;
+}
+
+.cssbuttons-io span {
+  position: relative;
+  z-index: 10;
+  transition: color 0.4s;
+  display: inline-flex;
+  align-items: center;
+  padding: 0.8em 1.2em 0.8em 1.05em;
+}
+
+.cssbuttons-io::before,
+.cssbuttons-io::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
+.cssbuttons-io::before {
+  content: "";
+  background: #000;
+  width: 120%;
+  left: -10%;
+  transform: skew(30deg);
+  transition: transform 0.4s cubic-bezier(0.3, 1, 0.8, 1);
+}
+
+.cssbuttons-io:hover::before {
+  transform: translate3d(100%, 0, 0);
+}
+
+.cssbuttons-io:active {
+  transform: scale(0.95);
 }
