--- a/imageSolver/imageSolver.css
+++ b/imageSolver/imageSolver.css
@@ -160,3 +160,80 @@ body{
 .cssbuttons-io:active {
   transform: scale(0.95);
 }
+
+
+
+
+
+.inputbuttons-io {
+  position: relative;
+  font-family: inherit;
+  display:inline-block;
+  font-weight: 500;
+  font-size: 18px;
+  letter-spacing: 0.05em;
+  border-radius: 0.8em;
+  cursor: pointer;
+  border: none;
+  background: linear-gradient(to right, #8e2de2, #4a00e0);
+  color: ghostwhite;
+  overflow: hidden;
+}
+
+.inputbuttons-io svg {
+  width: 1.2em;
+  height: 1.2em;
+  margin-right: 0.5em;
+}
+
+.inputbuttons-io span {
+  position: relative;
+  z-index: 10;
+  transition: color 0.4s;
+  display: inline-flex;
+  align-items: center;
+  padding: 0.8em 1.2em 0.8em 1.05em;
+}
+
+.inputbuttons-io::before,
+.inputbuttons-io::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
+.inputbuttons-io::before {
+  content: "";
+  background: #000;
+  width: 120%;
+  left: -10%;
+  transform: skew(30deg);
+  
+  transition: transform 0.4s cubic-bezier(0.3, 1, 0.8, 1);
+}
+
+.inputbuttons-io:hover::before {
+  transform: translate3d(100%, 0, 0);
+}
+
+.inputbuttons-io:active {
+  transform: scale(0.95);
+}
+
+.file-input-container {
+  position: relative; /* Needed for positioning the label */
+}
+
+.file-input {
+  /* Make the input completely invisible */
+  position: absolute;
+  opacity: 0;
+  width: 0.1px;
+  height: 0.1px;
+  pointer-events: none;
+  overflow: hidden;
+  z-index: -1;
+}
